--- a/indexmikel.html
+++ b/indexmikel.html
@@ -16,25 +16,25 @@
         <ul>
             <li style="list-style-type: none;">
                 <a href="indexmikel.html"></a>
-                Inicio
+                <button>Inicio</button>
             </li>
         </ul>
         <ul>
             <li style="list-style-type: none;">
                 <a href="indexmikel.html"></a>
-                Vehículos de Ocasión
+                <button>Vehículos de Ocasión</button>
             </li>
         </ul>
         <ul>
             <li style="list-style-type: none;">
                 <a href="indexmikel.html"></a>
-                Servicios
+                <button>Servicios</button>
             </li>
         </ul>
         <ul>
             <li style="list-style-type: none;">
                 <a href="indexmikel.html"></a>
-                Nosotros
+                <button>Nosotros</button>
             </li>
         </ul>
         <form>
