--- a/indexmikel.html
+++ b/indexmikel.html
@@ -15,14 +15,14 @@
     <nav>
         <ul>
             <li style="list-style-type: none;">
-                <a href="indexmikel.html"></a>
+                <a href="indexlaura.html"></a>
                 <button>Inicio</button>
             </li>
         </ul>
         <ul>
             <li style="list-style-type: none;">
                 <a href="indexmikel.html"></a>
-                <button>Vehículos de Ocasión</button>
+                <button onclick="location.href='indexlaura.html'">Vehículos de Ocasión</button>
             </li>
         </ul>
         <ul>
