--- a/indexlaura.html
+++ b/indexlaura.html
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
     <header>
     <h1>Auto Sarriko</h1>
     <ul>
-        <li>inicio</li>
-        <li>vehiculos de ocasion</li>
+        <li><a href="/indexlaura.html">inicio</a></li>
+        <li><a href="/indexmikel.html">vehiculos de ocasion</a></li>
         <li>nosotros</li>
     </ul>
     </header>
@@ -43,13 +42,5 @@
         <h5>Proyecto web financiado por la Unión Europea-Next Generation EU</h5>
         <img src="/img/Captura de pantalla 2025-10-29 130536.png">
     </aside>
-=======
-    <h1>Estoy genial, gracias por preguntar</h1>
-    <h4>Y yo allá</h4>
-    <h6>¡Me cago en to'!</h6>
-    <h3>hola que tal estas</h3>
-    <h6>estoy aqui</h6>
-    <h1>puta vida tete</h1>
->>>>>>> 6b2cb1323b3e82676448e9964d635ca9338fc1fc
 </body>
 </html>
