--- a/indexmikel.html
+++ b/indexmikel.html
@@ -47,7 +47,7 @@
     <article class="articulo">
         <ol style="list-style-type:upper-roman">
 
-        <hr><li><h4>Audi A4 B6, 1.9 TDI, 130cv. 6v. | 2002</h4></li>
+        <hr><li><h4>Audi A4 B6 Sedán, 1.9 TDI, 130cv. 6v. | 2002</h4></li>
             <p>Os presentamos este magnifico sedán de la marca Audi del año 2002, con su estupendo motor de gasóleo (Diesel) 1.9 TDI.</p>
                 <img src="https://www.lafuente.eu/upload/fotos_vehiculos/3126_1378112843.jpg" height="250" width="350">
             <ul style="list-style-type:disc">
